--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           docker pull geneontology/go-devops-base:actions 
 
-      - name: Run Tests 
+      - name: Provision and Test 
         run: |
           docker run --rm \
-              -e GEN_SSH_KEYS=${{  secrets.GEN_SSH_KEYS }}  -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} -e AWS_ACCESS_SECRET=${{ secrets.AWS_ACCESS_SECRET }} \
+              -e GEN_SSH_KEYS=${{ vars.GEN_SSH_KEYS }}  -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} -e AWS_ACCESS_SECRET=${{ secrets.AWS_ACCESS_SECRET }} \
               -v ${{ github.workspace }}:/go-deploytesting -w /go-deploytesting -t geneontology/go-devops-base:actions ./run.sh
