--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,6 +10,34 @@ on:
   workflow_dispatch:
 
 jobs:
+  docker:
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Prepare
+        id: prep
+        run: |
+          TAG=latest
+          IMAGE="go-dev"
+          echo ::set-output name=tagged_image::${IMAGE}:${TAG}
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: docker/Dockerfile.dev
+          platforms: linux/amd64,linux/arm64/v8
+          push: false
+          tags: ${{ steps.prep.outputs.tagged_image }}
+
   DockertTest:
     runs-on: ubuntu-22.04
     steps:
