--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           context: .
           file: docker/Dockerfile.dev.simple
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: linux/amd64
           push: false
           load: true
           tags: ${{ steps.prep.outputs.tagged_image }}
