--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker:
+  DockerBuild:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout
@@ -37,21 +37,3 @@ jobs:
           push: false
           load: true
           tags: ${{ steps.prep.outputs.tagged_image }}
-
-  DockertTest:
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v3
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      
-      - name: Pull Image
-        run: |
-          docker pull geneontology/go-devops-base:actions 
-
-      - name: Provision and Test 
-        run: |
-          docker run --rm \
-              -e GEN_SSH_KEYS=${{ vars.GEN_SSH_KEYS }}  -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} -e AWS_ACCESS_SECRET=${{ secrets.AWS_ACCESS_SECRET }} \
-              -v ${{ github.workspace }}:/go-deploytesting -w /go-deploytesting -t geneontology/go-devops-base:actions ./run.sh
