--- a/docker/Dockerfile.dev.simple
+++ b/docker/Dockerfile.dev.simple
@@ -2,23 +2,4 @@ FROM ubuntu:22.10
 
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get update && apt-get -y install python3 binutils python3-venv python3-pip wget
-RUN apt-get install -y awscli mg
-
-RUN wget -O- https://apt.releases.hashicorp.com/gpg | gpg --dearmor | tee /usr/share/keyrings/hashicorp-archive-keyring.gpg \
-    && echo "deb [signed-by=/usr/share/keyrings/hashicorp-archive-keyring.gpg] https://apt.releases.hashicorp.com $(lsb_release -cs) main" \
-        | tee /etc/apt/sources.list.d/hashicorp.list \
-    && apt-get update && apt-get install terraform
-
-RUN apt-get -qq purge && apt-get -qq clean && rm -rf /var/lib/apt/lists/*
-
-RUN pip install --no-cache-dir ansible s3cmd go-deploy
-
-ENV GEN_SSH_KEYS=0
-ENV AWS_ACCESS_KEY=""
-ENV AWS_ACCESS_SECRET=""
-ENV ANSIBLE_HOST_KEY_CHECKING=False
-
-COPY ./docker/entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-ENTRYPOINT [ "/entrypoint.sh" ]
+RUN apt-get update
