--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -22,12 +22,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Prepare
-        id: prep
+      - name: Set the value
         run: |
-          TAG=latest
-          IMAGE="go-dev"
-          echo ::set-output name=tagged_image::${IMAGE}:${TAG}
+          echo "tagged_image=geneontology/go-devops-base:actions" >> "$GITHUB_ENV"
 
       - name: Build and push
         uses: docker/build-push-action@v2
@@ -36,4 +33,9 @@ jobs:
           file: docker/Dockerfile.dev.simple
           push: false
           load: true
-          tags: ${{ steps.prep.outputs.tagged_image }}
+          tags: ${{ tagged_image }}
+
+      - name: List Images
+        run: |
+          docker image list | grep geneontology
+
