--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Set the value
         run: |
-          echo "tagged_image=geneontology/go-devops-base:actions" >> "$GITHUB_ENV"
+          echo "tagged_image=geneontology/go-devops-base:cicd" >> "$GITHUB_ENV"
 
-      - name: Build and push
+      - name: Build Image
         uses: docker/build-push-action@v2
         with:
           context: .
@@ -38,4 +38,21 @@ jobs:
       - name: List Images
         run: |
           docker image list | grep geneontology
+
+  DockertTest:
+    runs-on: ubuntu-22.04
+    needs: DockerBuild
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+
+      - name: Provision and Test
+        run: |
+          docker run --rm \
+              -e GEN_SSH_KEYS=${{ vars.GEN_SSH_KEYS }}  -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} -e AWS_ACCESS_SECRET=${{ secrets.AWS_ACCESS_SECRET }} \
+              -v ${{ github.workspace }}:/go-deploytesting -w /go-deploytesting -t ${{ env.tagged_image }} ./run.sh
 
