--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -38,6 +38,21 @@ jobs:
         run: |
           docker image list | grep geneontology
 
+      - name: Create Bash Script
+        run: |
+           cat <<EOF > run.sh |
+           #!/bin/bash
+           go-deploy -init --working-directory aws
+           go-deploy --working-directory aws -w test-go-deploy -c config.yml.sample
+           public_ip=`terraform -chdir=aws output -raw public_ip`
+           echo $public_ip
+           ssh -i /tmp/go-ssh ubuntu@$public_ip ls -l stage_dir/test_file
+           ret=$?
+           go-deploy --working-directory aws -w test-go-deploy -destroy
+           exit $ret
+           EOF
+           chmod +x run.sh
+
       - name: Provision and Test
         run: |
           docker run --rm \
